#
# Source Version: 3.0
# Software Release #: LLNL-CODE-422942
#

#include "cpyright.h"

package = doc
testdirectory = $(builddir)/check

include $(top_srcdir)/Makefile.common


docsdir = $(prefix)/docs
docs_SCRIPTS = \
index.html \
benchmarks.html \
pact.html \
pactteam.html \
pan.html \
pdbdiff.html \
pdb.html \
pdbview.html \
pgs.html \
pml.html \
ppc.html \
pypact.html \
score.html \
sx.html \
ultra.html \
benchmarks10.gif \
benchmarks1.gif \
benchmarks2.gif \
benchmarks3.gif \
benchmarks4.gif \
benchmarks5.gif \
benchmarks6.gif \
benchmarks7.gif \
benchmarks8.gif \
benchmarks9.gif \
pdbdiff.gif \
pgs1.gif \
pgs2.gif \
pgs3.gif \
pml1.gif \
pml2.gif \
ppc1.gif \
ultra1.gif \
ultra2.gif \
ultra3.gif \
ultra4.gif \
ultra5.gif \
ultra6.gif \
ultra7.gif \
ultra8.gif \
ultra9.gif


manpagesdir = $(prefix)/man/man1/
manpages_SCRIPTS = \
ultra.1 \
atdbg.1 \
do-net.1 \
cleanup-jobs.1 \
hserve.1 \
ls-jobs.1 \
sign.1 \
plock.1 \
system-id.1 \
pact.1 \
no-op.1 \
dargs.1

EXTRA_DIST = $(docs_SCRIPTS) $(manpages_SCRIPTS)

