#
# Source Version: 3.0
# Software Release #: LLNL-CODE-422942
#

#include "cpyright.h"

package = panacea/applications

include $(top_srcdir)/Makefile.common


scheme_SCRIPTS = \
panabgc.scm \
panache.scm \
panbgc.scm \
panpgc.scm \
panagc.scm \
panint.scm

bin_SCRIPTS = panache 

EXTRA_DIST = \
$(scheme_SCRIPTS) \
$(bin_SCRIPTS)

