#
# Source Version: 3.0
# Software Release #: LLNL-CODE-422942
#

#include "cpyright.h"

package = sx/applications

include $(top_srcdir)/Makefile.common


SUBDIRS = extensions

scheme_SCRIPTS = \
sxview.scm \
sxcomp.scm \
sxdm.scm \
pdbvcmd.scm \
pdbvdat.scm \
pdbview.rc \
pdbvio.scm \
pdbview.scm \
pdbvplt.scm \
binedit.scm \
pdbvdemo.scm \
pdbvbatch.scm \
pdbvxmpl.scm \
pdbview.pui \
netcdf.scm \
ezn.scm

bin_SCRIPTS = pdbview pdbdiff 

EXTRA_DIST = \
$(scheme_SCRIPTS) \
$(bin_SCRIPTS)

